Improve modal handling

--- a/resources/views/Basket/Components/AddItemToBasketOverlay.twig
+++ b/resources/views/Basket/Components/AddItemToBasketOverlay.twig
@@ -12,8 +12,8 @@
                     <!-- MODAL HEADER -->
                     <div class="modal-header">
                         <div class="modal-title h5">{{ trans("Ceres::Template.singleItemAdded") }}</div>
-                        <span class="text-muted ml-auto"><span>${ timeToClose }</span>s</span>
-                        <button type="button" @click="closeOverlay()" class="close ml-0 pl-1" data-dismiss="modal" aria-label="Close">
+                        <span class="text-muted ml-auto"><span class="timer"></span>s</span>
+                        <button type="button" class="close ml-0 pl-1" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
