--- a/resources/views/Customer/Components/ForgotPassword.twig
+++ b/resources/views/Customer/Components/ForgotPassword.twig
@@ -10,7 +10,7 @@
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 					</div>
 					<div class="modal-body">
-						<div class="alert alert-info alert-dismissible pwd-forgot-info">
+						<div class="alert alert-info w-100 pwd-forgot-info">
 							<span class="info-badge">{{ trans("Ceres::Template.loginForgotPasswordInfo") }}</span>
 						</div>
 						<div class="row">
