--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -41,7 +41,7 @@ $cyan:                      #17a2b8 !default;
 
 // legacy
 $brand-primary:             $blue !default;
-$brand-secondary:           #d4021d !default;
+$brand-secondary:           $red !default;
 $brand-success:             $green !default;
 $brand-info:                $cyan !default;
 $brand-warning:             $yellow !default;
