--- a/resources/scss/ceres/common/_card.scss
+++ b/resources/scss/ceres/common/_card.scss
@@ -1,12 +1,11 @@
-
-// TODO create component based on card to show these modifications
 .card{
 	
 	.item-edit{
 		position: absolute;
-		top: 1.25rem;
-		right: 1.25rem;
-		font-size: 1.5em;
+		top: 1rem;
+		right: 1rem;
+		font-size: 1.5rem;
+		line-height: 1.5rem;
 		
 		.fa{
     		width: 1em;
