--- a/resources/views/OrderReturn/Components/OrderReturn.twig
+++ b/resources/views/OrderReturn/Components/OrderReturn.twig
@@ -36,20 +36,14 @@
 
 					</div>
 					<div class="modal-footer">
-						<div class="row">
-							 <div class="col-sm-3 offset-sm-6">
-								<button type="button" data-dismiss="modal" class="btn btn-secondary btn-block float-right btn-medium">
-									<i class="fa fa-times" aria-hidden="true"></i>
-									{{ trans("Ceres::Template.returnCancel") }}
-								</button>		
-							</div>
-							 <div class="col-sm-3">
-								<button :disabled="isLoading" @click="sendReturnItems()" type="button" class="btn btn-primary btn-block float-right btn-medium">
-									<i v-waiting-animation="isLoading" class="fa fa-check" aria-hidden="true"></i>
-									{{ trans("Ceres::Template.returnConfirm") }}
-								</button>
-							</div>
-						</div>
+						<button type="button" data-dismiss="modal" class="btn btn-secondary btn-medium">
+							<i class="fa fa-times" aria-hidden="true"></i>
+							{{ trans("Ceres::Template.returnCancel") }}
+						</button>
+						<button :disabled="isLoading" @click="sendReturnItems()" type="button" class="btn btn-primary btn-medium">
+							<i v-waiting-animation="isLoading" class="fa fa-check" aria-hidden="true"></i>
+							{{ trans("Ceres::Template.returnConfirm") }}
+						</button>
 					</div>
 				</div>
 			</div>
