fix/ owl_carousel

--- a/resources/scss/ceres/widgets/Common/_item-list-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_item-list-widget.scss
@@ -4,6 +4,10 @@
     {
         padding-left: 0;
         padding-right: 0;
+
+        .row {
+            display: block;
+        }
     }
 
     .widget-caption
