--- a/resources/views/OrderReturn/Components/OrderReturnItem.twig
+++ b/resources/views/OrderReturn/Components/OrderReturnItem.twig
@@ -5,8 +5,10 @@
 		<div class="row">
 			<div class="col-xs-3 col-sm-2 order-flex">
 				<div class="input-group">
-					<span class="input-group-addon">
-						<input type="checkbox" v-model="isChecked" @change="updateValue($event)">
+					<span class="input-group-prepend">
+						<label class="input-group-text">
+							<input type="checkbox" v-model="isChecked" @change="updateValue($event)">
+						</label>
 					</span>
 					<input 	type="number" 
 							min="1" 
