--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -18719,17 +18719,17 @@ html.safari .popper-visible {
 }
 
 @media (min-width: 576px) {
-  .top-bar .row {
+  .wrapper-main header .row {
     -ms-flex-direction: row-reverse;
         flex-direction: row-reverse;
     position: relative;
     margin-left: 0;
     margin-right: 0;
   }
-  .top-bar .controls-list > li {
+  .wrapper-main header .controls-list > li {
     font-size: .8rem;
   }
-  .top-bar .controls-list > li .fa:not(.qty-sign) {
+  .wrapper-main header .controls-list > li .fa:not(.qty-sign) {
     font-size: 1rem;
     line-height: .8rem;
   }
