--- a/resources/scss/ceres/forms/_inputs.scss
+++ b/resources/scss/ceres/forms/_inputs.scss
@@ -1,4 +1,3 @@
-
 $color: $gray-dark;
 $background: white;
 $active-background: white;
@@ -6,89 +5,100 @@ $border-color: $gray-lighter;
 $border-active: $gray-light;
 $border-width: 1px;
 
-.input-unit.textarea{
+.input-unit.textarea
+{
     background-color: #fff;
 
-    & > textarea {
+    & > textarea
+    {
         overflow-y: auto;
         white-space: normal;
     }
 
-    & > label {
+    & > label
+    {
         background-color: #fff;
         opacity: 0.9;
     }
 }
 
-.input-unit{
-    position:relative;
-    
+.input-unit
+{
+    position: relative;
     width: 100%;
     margin-bottom: $grid-gutter-width/2;
-    border:$border-width solid $border-color;
-	border-radius: $border-radius;
+    border: $border-width solid $border-color;
+    border-radius: $border-radius;
     overflow: hidden;
 
-    &.media-xs-d {
-        @include media-breakpoint-down(xs) { 
+    &.media-xs-d
+    {
+        @include media-breakpoint-down(xs)
+        {
             margin-bottom: $grid-gutter-width/2 !important;
         }
     }
 
-    &.no-bottom {
-        margin-bottom: 0px; 
+    &.no-bottom
+    {
+        margin-bottom: 0px;
     }
 
-  input[type="date"]{
-    max-height: 38px;
-  }
+    input[type="date"]
+    {
+        max-height: 38px;
+    }
 
     input[type], textarea,
-	input:not([type="checkbox"]),
-	input:not([type="radio"]),
-	.input-unit-preview {
+    input:not([type="checkbox"]),
+    input:not([type="radio"]),
+    .input-unit-preview
+    {
 
-	    color: $color;
-	    background-color: $background;
-	    border: none;
-	    box-shadow: none;//inset 0 1px 0 rgba(255,255,255,.15), 0 1px 1px rgba(0,0,0,.075);
-	    line-height: 1.2em!important;
-	    padding: 1.3rem 1rem .3rem 1rem;
-	    width: 100%;
-	    font-size: 1em;
-	    // text-align: right;
-	    outline: none!important;
+        color: $color;
+        background-color: $background;
+        border: none;
+        box-shadow: none; //inset 0 1px 0 rgba(255,255,255,.15), 0 1px 1px rgba(0,0,0,.075);
+        line-height: 1.2em !important;
+        padding: 1.3rem 1rem .3rem 1rem;
+        width: 100%;
+        font-size: 1em;
+        // text-align: right;
+        outline: none !important;
 
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
         display: block;
 
-	    transition: all .2s;
+        transition: all .2s;
 
-	    
-	    &:focus,
-	    &.filled{
-	        color: $color;
-	        background-color: $active-background;
-	        border-color: $border-active;
-	    }
+        &:focus,
+        &.filled
+        {
+            color: $color;
+            background-color: $active-background;
+            border-color: $border-active;
+        }
 
-	    &.disabled,
-	    &:disabled {
+        &.disabled,
+        &:disabled
+        {
             background-color: $gray-lightest;
             border-color: $gray-lighter;
-			cursor: not-allowed;
+            cursor: not-allowed;
 
-            & ~ label{
-            	color: $gray-lighter;
-            	cursor: not-allowed;
+            & ~ label
+            {
+                color: $gray-lighter;
+                cursor: not-allowed;
             }
-	    }
-        
-        & + .symbol{
-            color:$gray;
-            position:absolute;
+        }
+
+        & + .symbol
+        {
+            color: $gray;
+            position: absolute;
             top: $border-width;
             right: $border-width;
 
@@ -96,91 +106,113 @@ $border-width: 1px;
         }
 
         &.disabled,
-        &:disabled {
-            & + .symbol{
+        &:disabled
+        {
+            & + .symbol
+            {
                 color: $gray;
             }
 
-            & + label{
-                color: $gray-light!important;
+            & + label
+            {
+                color: $gray-light !important;
             }
         }
-	}
+    }
 
-	label,
-	.input-unit-label{
+    label,
+    .input-unit-label
+    {
         font-size: .65em;
-        line-height: 1em!important;
+        line-height: 1em !important;
         text-transform: uppercase;
-		letter-spacing: .1px;
-		font-weight: 600;
+        letter-spacing: .1px;
+        font-weight: 600;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
 
         width: 100%;
         padding: 0.35rem 1rem 0;
         margin-bottom: 0;
         color: $gray-light;
 
-        position:absolute;
+        position: absolute;
         top: 0;
         left: 0;
         transition: color .15s;
         cursor: pointer;
         /* Better Font Rendering =========== */
-	    -webkit-font-smoothing: antialiased;
-	    -moz-osx-font-smoothing: grayscale;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
     }
 
-    i{
-    	font-style: normal;
-	    font-weight: bold;
-	    position: absolute;
-	    top: 0;
-	    left: 0;
-	    background-color: $gray-lightest;
-	    color: $gray-lighter;
-	    line-height: 1.2em;
-	    width: 1.2em;
-	    text-align: center;
-	    cursor: pointer;
-	    border-bottom-right-radius: 2px;
+    i
+    {
+        font-style: normal;
+        font-weight: bold;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: $gray-lightest;
+        color: $gray-lighter;
+        line-height: 1.2em;
+        width: 1.2em;
+        text-align: center;
+        cursor: pointer;
+        border-bottom-right-radius: 2px;
     }
 
-	&.error{
-		z-index: $zIndex-1;
-    	border-color: $danger;
+    &.error
+    {
+        z-index: $zIndex-1;
+        border-color: $danger;
 
-		input{
-        	color: $danger;
-		}
-
-        label{
+        input
+        {
             color: $danger;
         }
 
-        i{
+        label
+        {
+            color: $danger;
+        }
+
+        i
+        {
             background-color: $danger;
             color: white;
         }
 
     }
 
-    &.success{
-    	z-index: $zIndex-1;
-    	border-color: $success;
+    &.success
+    {
+        z-index: $zIndex-1;
+        border-color: $success;
 
-    	input{
-        	color: $success;
-		}
-
-        label{
-            color:$success;
+        input
+        {
+            color: $success;
         }
 
-        i{
-            background-color:$success;
+        label
+        {
+            color: $success;
+        }
+
+        i
+        {
+            background-color: $success;
             color: white;
         }
-        
+
+    }
+
+    .custom-select
+    {
+        padding: 1.2rem 2rem .4rem 1rem;
+        background-position: calc(100% - 1rem) 1.2rem;
     }
 }
 
@@ -188,7 +220,7 @@ $border-width: 1px;
 {
     height: 38px;
     cursor: pointer;
-    
+
     > input[type="file"]
     {
         width: 0;
@@ -196,12 +228,12 @@ $border-width: 1px;
         padding: 0;
         visibility: hidden;
     }
-    
+
     > .input-unit-preview
     {
         height: 38px;
     }
-    
+
     > .input-unit-btn
     {
         content: "";
@@ -212,8 +244,9 @@ $border-width: 1px;
         display: block;
         right: 0;
         top: 0;
-        
-        i {
+
+        i
+        {
             margin: 10px;
             width: 18px;
             height: 18px;
@@ -222,60 +255,72 @@ $border-width: 1px;
             color: $body-color;
         }
     }
-    
+
     &.success .input-unit-btn,
-    &.success .input-unit-btn i {
+    &.success .input-unit-btn i
+    {
         background-color: $success;
         color: #fff;
     }
-    
+
     &.error .input-unit-btn,
-    &.error .input-unit-btn i {
+    &.error .input-unit-btn i
+    {
         background-color: $danger;
         color: #fff;
     }
 }
 
-.input-unit.multiple{
-	display: flex;
+.input-unit.multiple
+{
+    display: flex;
     flex-flow: row nowrap;
 
-    &>input{
-    	width: 70%;
+    & > input
+    {
+        width: 70%;
     }
 
-    &>select{
-    	width: 30%;
-    	border-left: $border-width solid $border-color;
+    & > select
+    {
+        width: 30%;
+        border-left: $border-width solid $border-color;
     }
 }
 
-.remove-disabled-coloring {
-    &:disabled {
+.remove-disabled-coloring
+{
+    &:disabled
+    {
         background-color: initial !important;
     }
 }
 
-.form-check-label {
-  transition: all .3s ease;
-
-  &.error {
-    background: $danger !important;
-    color: $white !important;
-    border-radius: .1rem;
+.form-check-label
+{
     transition: all .3s ease;
-    padding: .5em 1.75rem;
 
-    a {
-      color: $white;
-      &:hover {
-        color: $gray-lighter2;
-      }
-    }
+    &.error
+    {
+        background: $danger !important;
+        color: $white !important;
+        border-radius: .1rem;
+        transition: all .3s ease;
+        padding: .5em 1.75rem;
 
-    & .text-muted {
-      color: $white !important;
+        a
+        {
+            color: $white;
+            &:hover
+            {
+                color: $gray-lighter2;
+            }
+        }
+
+        & .text-muted
+        {
+            color: $white !important;
+        }
     }
-  }
 }
 
