--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -183,7 +183,7 @@
                         </div>
 
                         <!-- Variation -->
-                        <div class="row mb-3" v-if="variations.length > 0">
+                        <div class="mb-3" v-if="variations.length > 0">
                             <variation-select template="#vue-variation-select" :attributes="attributeNameMap" :variation-units="variationUnits" :variations="variations" :preselect="currentVariation.variation.id" :unitPreselect="currentVariation.variation.unitCombinationId" @is-valid-change="isVariationSelected = $event"></variation-select>
                         </div>
                         <!-- /Variation -->
