FIX address forms

--- a/resources/views/Customer/Components/AddressSelect/CreateUpdateAddress.twig
+++ b/resources/views/Customer/Components/AddressSelect/CreateUpdateAddress.twig
@@ -1,24 +1,8 @@
 {{ component( "Ceres::Customer.Components.AddressInputGroup.AddressInputGroup" ) }}
 
 <script type="x/template" id="vue-create-update-address">
-    <form id="billing_address_form" v-if="addressType === '1'">
-        <div class="row">
-
-            <address-input-group template="#vue-address-input-group" :address-type="addressType" :modal-type="modalType" :value="addressData" @input="emitInputEvent($event)"></address-input-group>
-
-            <div class="col-xs-12">
-                <button type="button" class="btn btn-primary btn-block" @click="validate" :disabled="waiting">{{ trans("Ceres::Template.addressSave") }}</button>
-            </div>
-        </div>
-    </form>
-    <form id="delivery_address_form" v-else-if="addressType === '2'">
-        <div class="row">
-
-            <address-input-group template="#vue-address-input-group" :address-type="addressType" :modal-type="modalType" :value="addressData" @input="emitInputEvent($event)"></address-input-group>
-
-            <div class="col-xs-12">
-                <button type="button" class="btn btn-primary btn-block" @click="validate" :disabled="waiting">{{ trans("Ceres::Template.addressSave") }}</button>
-            </div>
-        </div>
+    <form ref="addressForm">
+        <address-input-group template="#vue-address-input-group" :address-type="addressType" :modal-type="modalType" :value="addressData" @input="emitInputEvent($event)"></address-input-group>
+        <button type="button" class="btn btn-primary btn-block" @click="validate" :disabled="waiting">{{ trans("Ceres::Template.addressSave") }}</button>
     </form>
 </script>
