--- a/resources/views/Checkout/OrderDetails.twig
+++ b/resources/views/Checkout/OrderDetails.twig
@@ -14,7 +14,7 @@
                 <h5>{{ trans("Ceres::Template.orderConfirmationOrderId") }} {{ orderData.order.id }}</h5>
             </div>
 
-            <div class="card-block">
+            <div class="card-body">
                 <div class="details">
                     <div class="row">
                         <strong class="col-xs-6 col-sm-5">{{ trans("Ceres::Template.orderConfirmationDate") }}</strong>
