--- a/resources/views/MyAccount/Components/AccountSettings.twig
+++ b/resources/views/MyAccount/Components/AccountSettings.twig
@@ -1,5 +1,5 @@
 <script type="x/template" id="vue-account-settings">
-    <div class="card-block p-3">
+    <div class="card-body">
         <div class="row  mb-3">
             <div class="col-sm-4">
                 <strong>{{ trans("Ceres::Template.myAccountEmail") }}</strong>
