--- a/resources/views/Customer/Components/UserLoginHandler.twig
+++ b/resources/views/Customer/Components/UserLoginHandler.twig
@@ -1,7 +1,7 @@
 <script type="x/template" id="vue-user-login-handler">
     <div id="login-change">
         <div class="dropdown" v-if="isLoggedIn">
-            <a href="#" class="dropdown-toggle" id="accountMenuList" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a href="#" class="dropdown-toggle" id="accountMenuList" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-boundary="window">
                 <i class="fa fa-user d-sm-none" aria-hidden="true"></i> 
                 <span class="hidden-xs-down">{{ trans("Ceres::Template.loginHello", {"username": "${username}"}) }}</span>
             </a>
