--- a/resources/scss/Ceres.scss
+++ b/resources/scss/Ceres.scss
@@ -37,7 +37,7 @@
 @import "ceres/components/featured-sale-new";
 @import "ceres/components/live-shopping";
 @import "ceres/components/notifications";
-@import "ceres/components/popper";
+@import "ceres/components/popover";
 
 // Forms
 @import "ceres/forms/input-groups";
