--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -17797,137 +17797,8 @@ html.ie #thumb-carousel .owl-stage .owl-item img {
   }
 }
 
-html.safari .popper {
-  display: none;
-}
-
-html.safari .popper-visible {
-  display: block;
-}
-
-.popper {
-  max-width: 276px;
-  padding: 1px;
-  text-align: left;
-  background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 0.2rem;
-  visibility: hidden;
-  margin: 5px;
-  z-index: 10000;
-  position: absolute;
-}
-
-.popper .popper__arrow {
-  width: 0;
-  height: 0;
-  margin: 0 2px;
-  position: absolute;
-  border: solid;
-}
-
-.popper .popper-title {
-  padding: 0.5rem 0.75rem;
-  margin: 0;
-  font-size: 1rem;
-  background-color: #f7f7f7;
-  border-bottom: 1px solid #ebebeb;
-  border-radius: .12857rem .12857rem 0 0;
-  text-align: center;
-}
-
-.popper .popper-content {
-  padding: 0.5rem 0.75rem;
-  line-height: 1.5;
-  font-size: .875rem;
-  word-wrap: break-word;
-}
-
-.popper.popper-visible {
-  visibility: visible;
-}
-
-.popper[x-placement] .popper__arrow {
-  border: 1rem solid transparent;
-}
-
-.popper[x-placement] .popper__arrow:after {
-  border: 1rem solid transparent;
-  content: "";
-  position: absolute;
-  border-style: solid;
-}
-
-.popper[x-placement^="top"] {
-  margin-bottom: 11px;
-}
-
-.popper[x-placement^="top"] .popper__arrow {
-  border-bottom-width: 0;
-  border-top-color: rgba(0, 0, 0, 0.2);
-  bottom: -10px;
-  left: calc(50% - 5px);
-}
-
-.popper[x-placement^="top"] .popper__arrow:after {
-  border-bottom-width: 0;
-  border-top-color: #fff;
-  left: -10px;
-  bottom: 1px;
-}
-
-.popper[x-placement^="bottom"] {
-  margin-top: 11px;
-}
-
-.popper[x-placement^="bottom"] .popper__arrow {
-  border-top-width: 0;
-  border-bottom-color: rgba(0, 0, 0, 0.2);
-  top: -10px;
-  left: calc(50% - 5px);
-}
-
-.popper[x-placement^="bottom"] .popper__arrow:after {
-  border-top-width: 0;
+.popover[x-placement="bottom"] .arrow::after {
   border-bottom-color: #f7f7f7;
-  left: -10px;
-  bottom: -11px;
-}
-
-.popper[x-placement^="right"] {
-  margin-left: 11px;
-}
-
-.popper[x-placement^="right"] .popper__arrow {
-  border-left-width: 0;
-  border-right-color: rgba(0, 0, 0, 0.2);
-  left: -12px;
-  top: calc(50% - 5px);
-}
-
-.popper[x-placement^="right"] .popper__arrow:after {
-  border-left-width: 0;
-  border-right-color: #fff;
-  left: 1px;
-  bottom: -10px;
-}
-
-.popper[x-placement^="left"] {
-  margin-right: 11px;
-}
-
-.popper[x-placement^="left"] .popper__arrow {
-  border-right-width: 0;
-  border-left-color: rgba(0, 0, 0, 0.2);
-  right: -12px;
-  top: calc(50% - 5px);
-}
-
-.popper[x-placement^="left"] .popper__arrow:after {
-  border-right-width: 0;
-  border-left-color: #fff;
-  left: -11px;
-  bottom: -10px;
 }
 
 .input-group-v .input-unit-v1 {
