--- a/resources/views/LiveShopping/Components/LiveShoppingDetails.twig
+++ b/resources/views/LiveShopping/Components/LiveShoppingDetails.twig
@@ -64,11 +64,11 @@
                 <div class="live-shopping-prices-rebate" v-if="!isNaN(itemPriceRebatePercentage)">{{ trans("Ceres::Template.liveShoppingRebate", {"rebate": "${ itemPriceRebatePercentage }" }) }}</div>
                 <div class="live-shopping-prices-container">
                     <div class="live-shopping-price">
-                        <strong>${ prices.price.price.formatted } *</strong>
+                        <strong>${ prices.price.unitPrice.formatted } *</strong>
                     </div>
-                    <span v-if="displaySettings.showCrossPrice && prices.rrp.price.value > 0">
-                        <span v-if="prices.isRrpDefaultPrice">{{ trans("Ceres::Template.liveShoppingBefore", {"price": "<del>${ prices.rrp.price.formatted }</del>"}) | raw }}</span>
-                        <span v-else>{{ trans("Ceres::Template.liveShoppingRrp", {"price": "<del>${ prices.rrp.price.formatted }</del>"}) | raw }}</span>
+                    <span v-if="displaySettings.showCrossPrice && prices.rrp.unitPrice.value > 0">
+                        <span v-if="prices.isRrpDefaultPrice">{{ trans("Ceres::Template.liveShoppingBefore", {"price": "<del>${ prices.rrp.unitPrice.formatted }</del>"}) | raw }}</span>
+                        <span v-else>{{ trans("Ceres::Template.liveShoppingRrp", {"price": "<del>${ prices.rrp.unitPrice.formatted }</del>"}) | raw }}</span>
                     </span>
                 </div>
             </div>
