--- a/resources/scss/Ceres_legacy.scss
+++ b/resources/scss/Ceres_legacy.scss
@@ -80,4 +80,6 @@ $contexts:
     }
 }
 
-.card-block { @extend .card-body };
+.card-block { @extend .card-body; }
+
+.bg-faded { @extend .bg-light; }
