--- a/resources/views/Basket/Components/AddItemToBasketOverlay.twig
+++ b/resources/views/Basket/Components/AddItemToBasketOverlay.twig
@@ -65,7 +65,7 @@
 
                     <!-- MODAL FOOTER -->
                     <div class="modal-footer">
-                        <a v-waiting-animation-infinite href="{{ urls.basket }}" rel="nofollow" class="btn btn-primary btn-medium btn-m-r btn-outline-primary">
+                        <a v-waiting-animation-infinite href="{{ urls.basket }}" rel="nofollow" class="btn btn-outline-primary btn-medium btn-m-r">
                             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                             {{ trans("Ceres::Template.singleItemBasket") }}
                         </a>
