--- a/resources/scss/ceres/views/Templates/BasketPreview/_basket-preview.scss
+++ b/resources/scss/ceres/views/Templates/BasketPreview/_basket-preview.scss
@@ -36,7 +36,7 @@
     {
 	    display: flex;
 	    flex-flow: column nowrap;
-    	flex: 1;
+    	flex: 1 1 auto;
         overflow: auto;
 
         @include media-breakpoint-only(sm)
@@ -49,6 +49,7 @@
     {
 	    display: flex;
 	    flex-flow: column nowrap;
+        flex: 0 0 auto;
         border-top: 1px solid $gray-lighter;
 
         @extend .small;
