--- a/resources/views/Basket/Components/BasketPreview.twig
+++ b/resources/views/Basket/Components/BasketPreview.twig
@@ -4,8 +4,8 @@
 
 <script type="x/template" id="vue-basket-preview">
     <div class="wrapper-inner basket-preview">
-        <header class="basket-header p-a-1">
-            <div class="d-inline-block m-a-0 basket-header-caption">{{ trans("Ceres::Template.basketPreview") }}</div>
+        <header class="basket-header p-3">
+            <div class="d-inline-block basket-header-caption">{{ trans("Ceres::Template.basketPreview") }}</div>
             <button v-toggle-basket-preview type="button" class="close" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
@@ -17,7 +17,7 @@
             </div>
         </div>
 
-        <div class="basket-preview-content row pl-3 pr-3">
+        <div class="basket-preview-content">
             <!-- BASKET LIST -->
             <div class="list col-sm-7 col-md-12 pt-3">
                 <div class="cmp cmp-basket-preview-list">
@@ -27,7 +27,7 @@
             <!-- ./BASKET LIST -->
 
             <!-- BASKET PREVIEW BOTTOM -->
-            <div class="bg-faded totals col-sm-5 col-md-12 pt-3">
+            <div class="bg-light totals col-sm-5 col-md-12 pt-3">
 
                 <basket-totals template="#vue-basket-totals"></basket-totals>
 
